@@ -342,6 +342,8 @@ Trunk - Unreleased
 
     HIVE-631. Fix TestParse. (Namit Jain via zshao)
 
+    HIVE-626. Fix Column Pruner column order bug. (Yongqiang He via zshao)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
